--- a/calculator.html
+++ b/calculator.html
@@ -8,27 +8,29 @@
 <body>
 <main>
 <span class="antwoord"></span>	
-<span class="type"></span>
+<span class="som" id="som" ></span>
 
-<button class="c">C</button>
+<button id="c" class="c">C</button>
 <aside>
-	<button>7</button>
-	<button>8</button>
-	<button>9</button>
+	<button onclick="javascript:cijfer1(7)">7</button>
+	<button onclick="javascript:cijfer1(8)">8</button>
+	<button onclick="javascript:cijfer1(9)">9</button>
 	<button>+</button>
-	<button>4</button>
-	<button>5</button>
-	<button>6</button>
+	<button onclick="javascript:cijfer1(4)">4</button>
+	<button onclick="javascript:cijfer1(5)">5</button>
+	<button onclick="javascript:cijfer1(6)">6</button>
 	<button>-</button>
-	<button>1</button>
-	<button>2</button>
-	<button>3</button>
+	<button onclick="javascript:cijfer1(1)">1</button>
+	<button onclick="javascript:cijfer1(2)">2</button>
+	<button onclick="javascript:cijfer1(3)">3</button>
 	<button>÷</button>
-	<button>0</button>
+	<button onclick="javascript:cijfer1(0)">0</button>
 	<button>.</button>
 	<button>x</button>
 	<button>=</button>
 </aside>
 </main>
+
+<script src="calculator.js" type="text/javascript" ></script>
 </body>
 </html>
