--- a/calculator.html
+++ b/calculator.html
@@ -9,10 +9,10 @@
 <form name="calculator">
 <main>
 
-<input type="text" name="text2" id="antwoord">
+<input type="text" name="txt2" id="antwoord">
 <input type="text" name="txt1" id="som">
 
-<button id="c" class="c">C</button>
+<button id="c" class="c" >C</button>
 <aside>
 	<input type=button name=btn7 value=7 onclick="test(btn7.value)">
 	<input type=button name=btn8 value=8 onclick="test(btn8.value)">
@@ -29,7 +29,7 @@
 	<input type=button name=btnmul value=* onclick="test(btnmul.value)">
 	<input type=button name=btn0 value=0 onclick="test(btn0.value)">
 	<input type=button name=potbtn value=. onclick="test(potbtn.value)">
-	<input type=button name=eqlbtn value== onclick="txt1.value=eval(txt1.value)">
+	<input type=button name=eqlbtn value== onclick="txt2.value=eval(txt1.value)">
 	<input type=button name=divbtn value=/ onclick="test(divbtn.value)">
 
 </aside>
